--- a/jpashop/src/main/resources/templates/order/orderForm.html
+++ b/jpashop/src/main/resources/templates/order/orderForm.html
@@ -4,18 +4,21 @@
 <body>
 <div class="container">
   <div th:replace="fragments/bodyHeader :: bodyHeader"/>
+
   <form role="form" action="/order" method="post">
     <div class="form-group">
       <label for="member">주문회원</label>
       <select name="memberId" id="member" class="form-control">
-        <option value="">회원선택</option> <option th:each="member : ${members}"
-                                               th:value="${member.id}"
-                                               th:text="${member.name}" />
+        <option value="">회원선택</option>
+        <option th:each="member : ${members}"
+                th:value="${member.id}"
+                th:text="${member.name}" />
       </select>
     </div>
     <div class="form-group">
       <label for="item">상품명</label>
-      <select name="itemId" id="item" class="form-control"> <option value="">상품선택</option>
+      <select name="itemId" id="item" class="form-control">
+        <option value="">상품선택</option>
         <option th:each="item : ${items}"
                 th:value="${item.id}"
                 th:text="${item.name}" />
